--- a/index.html
+++ b/index.html
@@ -87,9 +87,10 @@
 
           <p class="huge-text">
             I am an experienced Backend Developer who has developed Back-end
-            applications, designed, documented, implemented and solutions. I
-            spent the last few years honing and adding to my skill-set. I love
-            to explore and solve problems.
+            applications, designed, documented, implemented and written Unit
+            tests for APIs to meet business solutions. I spent the last few
+            years honing and adding to my skill-set. I love to explore and solve
+            problems.
           </p>
 
           <div class="section-make-row">
