add br at the top of the copyright

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <title>Otu Michael's - Home</title>
-    <meta content="" name="This is my personal portfolio" />
-    <meta content="" name="otu michael cv resume personal portfolio" />
+    <meta content="description" name="This is my personal portfolio" />
+    <meta content="keywords" name="otu michael cv resume personal portfolio" />
 
     <!-- Template Main CSS File -->
     <link href="./style.css" rel="stylesheet" />
@@ -65,7 +65,7 @@
           >Telegram</a
         >
         <a
-          href="https://github.com/otumina-empire"
+          href="https://github.com/otumian-empire"
           target="_blank"
           class="nav-link small-font"
           >github</a
@@ -151,7 +151,6 @@
           <li class="section-list-item">Flask</li>
           <li class="section-list-item">Express</li>
           <li class="section-list-item">Django</li>
-          <li class="section-list-item">Express</li>
         </ul>
       </section>
       <!-- End Skills Section -->
@@ -322,6 +321,7 @@
             devotion of the people who work to make it real
           </em>
         </p>
+        <br />
         <p class="copyright">Michael Otu &copy; <span id="cr"></span></p>
       </div>
     </footer>
